fixes shifting issue on tabs

--- a/app/styles/components/_tabs.scss
+++ b/app/styles/components/_tabs.scss
@@ -13,7 +13,7 @@
     margin: 0, 15px, 0, 0;
     padding: 10px;
     background: color(black,inactive);
-    border-left: 2px solid color(black,dark);
+    border-left: 3px solid color(black,dark);
 
     span {
       padding-left: 15px;
